--- a/app/src/main/res/layout/custom_constraint.xml
+++ b/app/src/main/res/layout/custom_constraint.xml
@@ -10,8 +10,6 @@
             android:id="@+id/imageViewTopLeft"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:scaleType="fitEnd"
             android:layout_weight="1"
@@ -24,8 +22,6 @@
             android:id="@+id/imageViewTopRight"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:scaleType="fitStart"
             app:layout_constraintDimensionRatio="H,1:1"
@@ -37,11 +33,12 @@
             android:id="@+id/imageViewBottomLeft"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:scaleType="fitEnd"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/textViewCaption"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintEnd_toStartOf="@id/imageViewBottomRight"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +48,6 @@
             android:id="@+id/imageViewBottomRight"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="16dp"
             android:scaleType="fitStart"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
@@ -59,5 +55,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/imageViewBottomLeft"
             app:layout_constraintTop_toBottomOf="@id/imageViewTopRight"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textViewCaption"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@android:color/black"
+            android:layout_marginStart="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/imageViewBottomLeft"
+            tools:text="Чем заняться на каникулах"
+            android:ellipsize="end"
+            app:layout_constraintWidth_max="wrap"
+            app:layout_constraintWidth_percent="0.6"
+            android:textSize="28sp"/>
 
 </merge>
