--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".MainActivity">
 
-    <!--<com.example.customview.CustomImageView-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="300dp"-->
-        <!--android:scaleType="centerCrop"-->
-        <!--android:src="@drawable/flower"/>-->
-
-    <!--<androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageViewBitmap"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        />-->
-    <com.example.customview.Customconstraint
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srcTopLeft="@drawable/flower"
-        app:srcTopRight="@drawable/flower"
-        app:srcBottomLeft="@drawable/flower"
-        android:layout_margin="16dp"
-        app:srcBottomRight="@drawable/flower"
-        app:text="Концерты декабря"/>
+    <com.example.customview.SlantedView
+            android:id="@+id/slantedView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"/>
 
 </LinearLayout>
